--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "homepage": "https://Hamid-javed/Intern-Design",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "react": "^19.1.0",
