--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://hamid-javed.github.io/Intern-Design",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "react": "^19.1.0",
