--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Taking pull
-        run: actions/checout@v3
+        run: actions/checkout@v3
     
       - name: Greetings
         run: echo "Welcome to my world"
