--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,23 @@
-name: First Workflow
+name: Make project build
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
 
 jobs:
-  demo:
+  Build-My-App:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Taking pull
-        uses: actions/checkout@v3
-        
-      - name: Greetings
-        run: echo "Welcome to my world"
-  
+      - uses: actions/checkout@v4.2.2
+
+      - name: install-node
+        uses: actions/setup-node@3.9.1
+
+      - name: install-dependences
+        run: npm install
+
+      - name: making-build
+        run: npm run build
+
+      - run: echo "Build created"
